fix authentication
